[metadata]
name = hello_world_package_jaylaw
version = 1.0.1
author = Jay Law
author_email = mr-jay-law@protonmail.com
description = A small hello world app
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = hello_world_package_jaylaw
python_requires = >=3.8